--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">  
+    
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
+    
+    <title>Clear Care</title>
 </head>
 <body>
+    <div id="site"></div>
+    <header id="header">
+        <h1 class="hidden">Welcome to Clear Care</h1>
+        <div id="logo">
+            <img src="images/logo.svg" alt="logo for Clear Care">
+        </div>
+        <nav id="Nav">
+            <h2 class="hidden">Header Navigation</h2>
+            <ul>
+                <li><a href="index.html"></a>HOME</li>
+                <li><a href="ourStory.html"></a> OUR STORY</li>
+                <li><a href="products.html"></a>PRODUCTS</li>
+                <li> <a href="contactUs.html"></a> CONTACT US</li>
+            </ul>
+        </nav>
+    </header>
+    <section id="homeBanner"> 
+      <h2 class="hidden">banner image with promo ad</h2>
+      <img src="https://via.placeholder.com/1080x265" alt="this is a blank temp image">
+    </section>
+    <section id="welcomeTxt">
+      <h2 class="hidden">Start of Body</h2>
+      <div>
+        <img src="https://via.placeholder.com/380x380" alt="this is a blank temp image"> 
+      </div>
+      <section id="welcomeMsg">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dui id fermentum cursus. Pellentesque viverra ac quam vel pretium. Quisque consequat consequat ultricies. In hendrerit risus at bibendum iaculis. Curabitur ut placerat metus. Duis placerat molestie venenatis. Curabitur eu metus mattis, finibus quam a, tincidunt nibh. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.<br>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dui id fermentum cursus. Pellentesque viverra ac quam vel pretium. Quisque consequat consequat ultricies. In hendrerit risus at bibendum iaculis. Curabitur ut placerat metus. Duis placerat molestie venenatis. Curabitur eu metus mattis, finibus quam a, tincidunt nibh. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.<br>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dui id fermentum cursus. Pellentesque viverra ac quam vel pretium. Quisque consequat consequat ultricies. In hendrerit risus at bibendum iaculis. Curabitur ut placerat metus. Duis placerat molestie venenatis. Curabitur eu metus mattis, finibus quam a, tincidunt nibh. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+        </p>
+      </section>
+    </section>
+
+    <section id="Product">
+      <h2 class="hidden">product promotion</h2>
+      <div id="productImg">
+        <img src="https://via.placeholder.com/450x250" alt="this is a blank temp image"> 
+      </div>
+      <section id="productButton">
+        <h3><a id="hire" href="#">CHECKOUT OUR PRODUCTS</a></h3>
+      </section>
+    </section>
+    <footer id="foot">
+      <h2 class="hidden">Footer navigation</h2>
+      <div id="logo">
+        <img src="images/logo.svg" alt="logo for Clear Care">
+      </div>
+      <div id="footNav">
+        <ul>
+          <li><a href="index.html"></a>HOME</li>
+          <li><a href="ourStory.html"></a> OUR STORY</li>
+          <li><a href="products.html"></a>PRODUCTS</li>
+          <li> <a href="contactUs.html"></a> CONTACT US</li>
+        </ul>
+      </div>
+      <div id="socialM"> 
+        <p>FOLLOW US ON SOCIAL MEDIA</p>
+      </div>
+    </footer>
+
+
+<script src="js/main.js"></script>
 
 </body>
 </html>
