almost dont our story

--- a/ourStory.html
+++ b/ourStory.html
@@ -31,21 +31,50 @@
             </ul>
         </nav>
     </header>
-    <section id="contactT">
-        <h2 class="hidden">Contact Title</h2>
-        <p>Drop us a comment bellow!</p>
+        <section id="titleBanner">
+            <h2 class="hidden">Banner image with Our Story title</h2>
+            <img src="https://via.placeholder.com/1080x265" alt="this is a blank temp image">
+        </section>
+        <section id="aboutUs">
+            <h2 class="hidden">about us write up</h2>
+        <section id="story">
+         <h2>Lorem ipsum dolor sit amet</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Suspendisse consectetur
+            feugiat orci, a aliquet ipsum hendrerit eu.
+            Sed accumsan at nisi eget lobortis. 
+            Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Suspendisse consectetur
+             feugiat orci, a aliquet ipsum hendrerit eu.
+           Sed accumsan at nisi eget lobortis. 
+            Ut rutrum est vel nunc euismod feugiat.
+           Ut rutrum est vel nunc euismod feugiat.<br>
+           Lorem ipsum dolor sit amet, consectetur
+           adipiscing elit. Suspendisse consectetur
+           feugiat orci, a aliquet ipsum hendrerit eu.
+           Sed accumsan at nisi eget lobortis.
+           Lorem ipsum dolor sit amet, consectetur
+           adipiscing elit. Suspendisse consectetur
+            feugiat orci, a aliquet ipsum hendrerit eu.
+          Sed accumsan at nisi eget lobortis. 
+           Ut rutrum est vel nunc euismod feugiat. 
+          Ut rutrum est vel nunc euismod feugiat.<br>
+          Lorem ipsum dolor sit amet, consectetur
+         adipiscing elit. Suspendisse consectetur
+          feugiat orci, a aliquet ipsum hendrerit eu.
+        Sed accumsan at nisi eget lobortis. 
+         Ut rutrum est vel nunc euismod feugiat.
+         Lorem ipsum dolor sit amet, consectetur
+         adipiscing elit. Suspendisse consectetur
+          feugiat orci, a aliquet ipsum hendrerit eu.
+        Sed accumsan at nisi eget lobortis. 
+         Ut rutrum est vel nunc euismod feugiat.
+        </p>
+        </section>
+        <div id="beerImg">
+            <img src="https://via.placeholder.com/400x600" alt="placeholder blank image">
+        </div>
     </section>
-    <section>
-        <form id="NameEmail" action="email.php" method="POST" enctype="text/plain">
-            <input class="contact-input" name="fullName" type="text" placeholder="First & Last Name">
-            <input class="contact-input" name="contactInfo" type="text" placeholder="Email Address">
-        </form> 
-        <form id="msgBox">
-            <textarea id="contact-message"  name="msg" placeholder="Say hello"></textarea>
-            <input name="submit" type="submit" value="Submit">
-        </form> 
-    </section>
-    
 
     <footer id="foot">
         <h2 class="hidden">Footer navigation</h2>
