blocked out product page and fixed some errors in other pgs

--- a/contactUs.html
+++ b/contactUs.html
@@ -18,7 +18,7 @@
     <div id="site"></div>
     <header id="header">
         <h1 class="hidden">Welcome to Clear Care</h1>
-        <div id="logo">
+        <div class="logo">
             <img src="images/logo.svg" alt="logo for Clear Care">
         </div>
         <nav id="Nav">
@@ -36,6 +36,7 @@
         <p>Drop us a comment bellow!</p>
     </section>
     <section id="contact">
+        <h2 class="hidden">name, email and message box form</h2>
         <form id="NameEmail" action="email.php" method="POST" enctype="text/plain">
             <input class="contact-input" name="fullName" type="text" placeholder="First & Last Name">
             <input class="contact-input" name="contactInfo" type="text" placeholder="Email Address">
@@ -48,7 +49,7 @@
     
     <footer id="foot">
         <h2 class="hidden">Footer navigation</h2>
-        <div id="logo">
+        <div class="logo">
           <img src="images/logo.svg" alt="logo for Clear Care">
         </div>
         <div id="footNav">
