--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="site"></div>
     <header id="header">
         <h1 class="hidden">Welcome to Clear Care</h1>
-        <div id="logo">
+        <div class="logo">
             <img src="images/logo.svg" alt="logo for Clear Care">
         </div>
         <nav id="Nav">
@@ -41,6 +41,7 @@
         <img src="https://via.placeholder.com/380x380" alt="this is a blank temp image"> 
       </div>
       <section id="welcomeMsg">
+        <h2 class="hidden">A welcome message about the brand</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dui id fermentum cursus. Pellentesque viverra ac quam vel pretium. Quisque consequat consequat ultricies. In hendrerit risus at bibendum iaculis. Curabitur ut placerat metus. Duis placerat molestie venenatis. Curabitur eu metus mattis, finibus quam a, tincidunt nibh. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.<br>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dui id fermentum cursus. Pellentesque viverra ac quam vel pretium. Quisque consequat consequat ultricies. In hendrerit risus at bibendum iaculis. Curabitur ut placerat metus. Duis placerat molestie venenatis. Curabitur eu metus mattis, finibus quam a, tincidunt nibh. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.<br>
@@ -60,7 +61,7 @@
     </section>
     <footer id="foot">
       <h2 class="hidden">Footer navigation</h2>
-      <div id="logo">
+      <div class="logo">
         <img src="images/logo.svg" alt="logo for Clear Care">
       </div>
       <div id="footNav">
