--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
     <div id="site"></div>
     <header id="header">
         <h1 class="hidden">Welcome to Clear Care</h1>
-        <div id="logo">
+        <div class="logo">
             <img src="images/logo.svg" alt="logo for Clear Care">
         </div>
         <nav id="Nav">
@@ -31,21 +31,44 @@
             </ul>
         </nav>
     </header>
-  
-    
+    <section id="titleBanner">
+        <h2 class="hidden">Banner image</h2>
+        <img src="https://via.placeholder.com/1080x265" alt="this is a blank temp image">
+    </section>
+    <section class="products">
+        <h2 class="hidden">products available row 1</h2>
+        <section>
+            <h2 class="hidden">product 1</h2>
+            <img src="https://via.placeholder.com/250x250" alt="this is a blank temp image">
+        </section>
+        <section>
+            <h2 class="hidden">product 2</h2>
+            <img src="https://via.placeholder.com/250x250" alt="this is a blank temp image">
+        </section>
+        <section>
+            <h2 class="hidden">product 3</h2>
+            <img src="https://via.placeholder.com/250x250" alt="this is a blank temp image">
+        </section>
+    </section>
+    <section class="products">
+        <h2 class="hidden">products available row 2</h2>
+        <section>
+            <h2 class="hidden">product 4</h2>
+            <img src="https://via.placeholder.com/250x250" alt="this is a blank temp image">
+        </section>
+        <section>
+            <h2 class="hidden">product 5</h2>
+            <img src="https://via.placeholder.com/250x250" alt="this is a blank temp image">
+        </section>
+        <section>
+            <h2 class="hidden">product 6</h2>
+            <img src="https://via.placeholder.com/250x250" alt="this is a blank temp image">
+        </section>
+    </section>
 
-
-
-
-
-
-
-
-
-    
     <footer id="foot">
         <h2 class="hidden">Footer navigation</h2>
-        <div id="logo">
+        <div class="logo">
           <img src="images/logo.svg" alt="logo for Clear Care">
         </div>
         <div id="footNav">
