--- a/landing.html
+++ b/landing.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
+
     <title>Welcome to Clear Care</title>
 </head>
 <body>
-    
+    <!--page still needs css styling-->
+    <header>
+        <h1 class="hidden">Landing page</h1>
+        <div>
+            <h2>Banner image with logo</h2>
+        </div>
+    </header>
+    <section>
+        <h2>Are you old enough to be here?</h2>
+        <section>
+            <h2 class="hidden">yes or no button</h2>
+            <p>Yes button will go here</p>
+            <p>no button will go here</p>
+        </section>
+    </section>
+    <footer>
+        <h2>Footer here will message to drink responsibly</h2>
+    </footer>
+
+    <script src="js/main.js"></script>
+
 </body>
 </html>
