--- a/ourStory.html
+++ b/ourStory.html
@@ -18,7 +18,7 @@
     <div id="site"></div>
     <header id="header">
         <h1 class="hidden">Welcome to Clear Care</h1>
-        <div id="logo">
+        <div class="logo">
             <img src="images/logo.svg" alt="logo for Clear Care">
         </div>
         <nav id="Nav">
@@ -78,7 +78,7 @@
 
     <footer id="foot">
         <h2 class="hidden">Footer navigation</h2>
-        <div id="logo">
+        <div class="logo">
           <img src="images/logo.svg" alt="logo for Clear Care">
         </div>
         <div id="footNav">
